k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo-svc
spec:
  selector:
    app: platform-demo
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
