k8s/network-policy.yaml
# Zero-trust networking

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: platform-demo-netpol
spec:
  podSelector:
    matchLabels:
      app: platform-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}   # Allow from same namespace
    ports:
    - port: 8000
      protocol: TCP
